# model-service

./: .gitignore  .pylintrc  Dockerfile  README.md  app.py  model_library.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
models/: .gitignore
models/base/: bow.pkl  classifier
