[tool.poetry]
name = "model-service"
version = "1.1.2"
description = "Wrapper service for the ML model."
authors = ["Philippe de Bekker, Hans Dekker, Luuk van Campen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
Flask = "2.2.4"
flask_cors = "3.0.10"
flasgger = "0.9.4"
joblib = "^1.2.0"
pandas = "^2.0.2"
requests = "^2.31.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.11.2"
dslinter = "^2.0.9"
black = "^23.3.0"
bandit = "^1.7.5"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
